--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme. <a href="https://github.com/roots/sage">Contribute on GitHub</a>
-Version:            8.2.1
-Author:             Roots
-Author URI:         https://roots.io/
+Theme Name:         Presenter notes
+Theme URI:          https://github.com/saulirajala/sermonNotes
+Description:        Simple theme for Presenter notes
+Version:            1.0
+Author:             Sauli Rajala
+Author URI:         https://irajala.com
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
