Add waypoint.js to repo; Add js-functionality to change-shortcode

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,8 +1,8 @@
 body {
     position: relative;
-}
-col-md-9 {
-    float:right;
+    &.single-post {
+        overflow: scroll;
+    }
 }
 .wrap.container {
     margin-left: 0;
